Coverity analysis defect 177476: Explicit null dereferenced

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2025-10-27, QE 2025-12-08, QE 2025-11-24, QE 2025-11-10
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Explicit null dereferenced

      A null pointer dereference will occur. Dereference of an explicit null value
      /src/mongo/db/pipeline/document_source_union_with.cpp:158: FORWARD_NULL 177476 "this->_sharedState" is initialized empty.
      /src/mongo/db/pipeline/document_source_union_with.cpp:197: FORWARD_NULL 177476 Attempting to access the managed object of an empty smart pointer "this->_sharedState".

            Assignee:
            Patrick Meredith (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: