SERVER-112671: Fix coverity initialization issue (#44085)

GitOrigin-RevId: 6c1746ec420b831d534d2842bfd6e9bf2f98a569